--- a/vNextSimulator/MongoCppConnect.vcxproj
+++ b/vNextSimulator/MongoCppConnect.vcxproj
@@ -107,7 +107,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\UserData\Programming\Utilities\boost_1_57_0\lib64-msvc-12.0;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\UserData\Programming\Utilities\boost_1_57_0\lib64-intel;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>copy /B $(TargetPath) $(SolutionDir)\SimulatorGUI\bin\Debug\</Command>
@@ -149,7 +149,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>D:\UserData\Programming\Utilities\boost_1_57_0\lib64-msvc-12.0;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\UserData\Programming\Utilities\boost_1_57_0\lib64-intel;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>copy /B $(TargetPath) $(SolutionDir)\SimulatorGUI\bin\Debug\
@@ -161,13 +161,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BorderConditions.h" />
     <ClInclude Include="JSONSaver.h" />
     <ClInclude Include="MaxStepsStabilityChecker.h" />
+    <ClInclude Include="RectangularHorisontalTransitionBorders.h" />
     <ClInclude Include="RectangularKuetteBorders.h" />
     <ClInclude Include="RectangularRoughKuetteBorders.h" />
     <ClInclude Include="RectangularTwoSidedKuetteBorders.h" />
     <ClInclude Include="SimulationManager.h" />
-    <ClInclude Include="Vector.h" />
+    <ClInclude Include="StabilityCheckers.h" />
     <ClInclude Include="VicsecPPInterractor.h" />
     <ClInclude Include="DataSnap.h" />
     <ClInclude Include="mtrand.h" />
@@ -181,11 +183,11 @@
   <ItemGroup>
     <ClCompile Include="JSONSaver.cpp" />
     <ClCompile Include="MaxStepsStabilityChecker.cpp" />
+    <ClCompile Include="RectangularHorisontalTransitionBorders.cpp" />
     <ClCompile Include="RectangularKuetteBorders.cpp" />
     <ClCompile Include="RectangularRoughKuetteBorders.cpp" />
     <ClCompile Include="RectangularTwoSidedKuetteBorders.cpp" />
     <ClCompile Include="SimulationManager.cpp" />
-    <ClCompile Include="Vector.cpp" />
     <ClCompile Include="VicsecPPInterractor.cpp" />
     <ClCompile Include="DataSnap.cpp" />
     <ClCompile Include="vNextSimulator.cpp" />
