started with web gui data connections

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\SimulationDataManager\packages.config" />
   <repository path="..\SimulatorGUI\packages.config" />
+  <repository path="..\WebGui.Tests\packages.config" />
   <repository path="..\WebGui\packages.config" />
 </repositories>
